add html page index

--- a/public/templates/home/index.html
+++ b/public/templates/home/index.html
@@ -1,11 +1,507 @@
-<div class="jumbotron text-center">
-    <h1>This is Home page</h1>
-	<a ui-sref="student" class="btn btn-primary">Go to Student page</a>
-    <a ui-sref="company" class="btn btn-primary">Go to Company page</a>
-    <a ui-sref="instructor-in-company" class="btn btn-primary">Go to Instructor in company page</a>
-    <a ui-sref="curator-in-university" class="btn btn-primary">Go to Curator in university page</a>
-    <a ui-sref="instructor-in-university" class="btn btn-primary">Go to Instructor in university page</a>
-    <a ng-click="ctrl.show()" class="btn btn-primary">Show something</a>
-</div>
-<button ng-click="ctrl.shownoti()">Click</button>
-
+<section class="wrapper">
+    <div class="container">
+		<div class="cat-top clearfix">
+			<div class="left w21">
+				<div class="cat clearfix">
+					<div class="red">
+						<div class="title-cat">
+							<img src="/assets/images/icon_categories.png" />
+							<span>CATEGORIES</span>
+						</div>
+					</div>
+					<div class="clearfix"></div>
+				</div>
+			</div>
+			<div class="cat-more">
+				<a href="">Du lịch</a>
+				<a href="">Thời trang nữ</a>
+				<a href="">Ẩm thực</a>
+				<a href="">Đồ công nghệ</a>
+				<a href="">Làm đẹp</a>
+				<a href="">Làm đẹp</a>
+			</div>
+			<div class="clearfix"></div>
+		</div>
+		<div class="product-ad pb10 clearfix">
+			<div class="left w21 bgfbf9f9">
+				<div class="top-nav clearfix"> 
+					<div class="wsmenucontent overlapblackbg"></div>
+					<div class="manumain">
+						<a id="navToggle" class="animated-arrow slideLeft"><span></span></a>
+					</div>
+					<nav class="wsmenu slideLeft" id="nav">
+						<ul id="menu" class="menu-primary">
+							<li data-id="1"><a href="#"><img src="/assets/images/thoi-trang.png" />Thời trang</a></li>
+							<li data-id="1"><a href="#"><img src="/assets/images/my-pham.png" />Mỹ phẩm</a></li>
+							<li data-id="1"><a href="#"><img src="/assets/images/me-va-be.png" />Mẹ và bé</a></li>
+							<li data-id="1"><a href="#"><img src="/assets/images/my-pham.png" />Mỹ phẩm</a></li>
+							<li data-id="1"><a href="#"><img src="/assets/images/me-va-be.png" />Mẹ và bé</a></li>
+							<li data-id="1"><a href="#"><img src="/assets/images/my-pham.png" />Mỹ phẩm</a></li>
+							<li data-id="1"><a href="#"><img src="/assets/images/me-va-be.png" />Mẹ và bé</a></li>
+							<li data-id="1"><a href="#"><img src="/assets/images/my-pham.png" />Mỹ phẩm</a></li>
+							<li data-id="2"><a href="#"><img src="/assets/images/me-va-be.png" />Mẹ và bé1</a></li>
+						</ul>
+					</nav>
+				</div>
+			</div>
+			<div class="left w55" id="menu-detail">
+				<div class="hide" id="menu-detail-1">
+					<a href="#"><img src="/assets/upload/adt.jpg" /></a>
+				</div>
+				<div class="" id="menu-detail-2">
+					<a href="#"><img src="/assets/upload/adt1.jpg" /></a>
+				</div>
+			</div>
+			<div class="left w24">
+				<div class="pb10">
+					<a href="#"><img src="/assets/upload/adt1.jpg" /></a>
+					<a href="#"><img src="/assets/upload/adt2.jpg" /></a>
+				</div>
+			</div>
+		</div>
+		<div class="product-ad pb10 clearfix">
+			<div class="left w50">
+				<div class="pr5 pb10">
+					<a href="#"><img src="/assets/upload/ad1.jpg" /></a>
+				</div>
+			</div>
+			<div class="left w50">
+				<div class="pl5">
+					<a href="#"><img src="/assets/upload/ad2.jpg" /></a>
+				</div>
+			</div>
+		</div>
+		<div class="product-deal pb10 clearfix">
+			<div class="cat">
+				<div class="red">
+					<div class="title-cat left">
+						<img src="/assets/upload/icon_thoi_trang.png" />
+						<span>E-voucher</span>
+					</div>
+					<div class="arrow left"></div>
+				</div>
+			</div>
+			<div class="cat-more">
+				<a href="">Du lịch</a>
+				<a href="">Thời trang nữ</a>
+				<a href="">Ẩm thực</a>
+				<a href="">Đồ công nghệ</a>
+				<a href="">Làm đẹp</a>
+			</div>
+			<div class="clearfix"></div>
+			<div class="product-deal-left left w25">
+				<div class="product bgfbf9f9">
+					<div class="img">
+						<img src="/assets/upload/p11.jpg" />
+					</div>
+					<div class="position">Áp dụng tại Hà Nội</div>
+					<div class="title"><a href="">"Shop more & save more" Bộ sư tập Esssentials</a></div>
+					<div class="price">Giá chỉ từ: <span>7.000.000 VND</span></div>
+				</div>
+			</div>
+			<div class="product-deal-right right w25">
+				<div class="product pl2">
+					<div class="bgfbf9f9">
+						<div class="img">
+							<img src="/assets/upload/p7.jpg" />
+						</div>
+						<div class="position">Áp dụng tại Hà Nội</div>
+						<div class="title"><a href="">Bộ sưu tập Lacoste</a></div>
+						<div class="price">Giá chỉ từ: <span>150.000 VND</span></div>
+					</div>
+				</div>
+			</div>
+			<div class="product-deal-middle left w50">
+				<div class="product left w50">
+					<div class="product-content pl2">
+						<div class="bgfbf9f9">
+							<div class="left w50">
+								<div class="title"><a href="">BST hot summer 2017</a></div>
+								<div class="pl5">Chỉ áp dụng tại Hà Nội</div>
+								<div class="price">Giá chỉ từ:<br/> <span>7.000.000 VND</span></div>
+							</div>
+							<div class="left w50">
+								<div class="img">
+									<img src="/assets/upload/deal1.jpg" />
+								</div>
+							</div>
+							<div class="clearfix"></div>
+						</div>
+					</div>
+				</div>
+				<div class="product left w50">
+					<div class="product-content pl2 pb2">
+						<div class="bgfbf9f9">
+							<div class="left w50">
+								<div class="title"><a href="">BST hot summer 2017</a></div>
+								<div class="pl5">Chỉ áp dụng tại Hà Nội</div>
+								<div class="price">Giá chỉ từ:<br/> <span>7.000.000 VND</span></div>
+							</div>
+							<div class="left w50">
+								<div class="img">
+									<img src="/assets/upload/deal1.jpg" />
+								</div>
+							</div>
+							<div class="clearfix"></div>
+						</div>
+					</div>
+				</div>
+				<div class="product left w50">
+					<div class="product-content pl2 pb2">
+						<div class="bgfbf9f9">
+							<div class="left w50">
+								<div class="title"><a href="">BST hot summer 2017</a></div>
+								<div class="pl5">Chỉ áp dụng tại Hà Nội</div>
+								<div class="price">Giá chỉ từ:<br/> <span>7.000.000 VND</span></div>
+							</div>
+							<div class="left w50">
+								<div class="img">
+									<img src="/assets/upload/deal1.jpg" />
+								</div>
+							</div>
+							<div class="clearfix"></div>
+						</div>
+					</div>
+				</div>
+				<div class="product left w50">
+					<div class="product-content pl2 pb2">
+						<div class="bgfbf9f9">
+							<div class="left w50">
+								<div class="title"><a href="">BST hot summer 2017</a></div>
+								<div class="pl5">Chỉ áp dụng tại Hà Nội</div>
+								<div class="price">Giá chỉ từ:<br/> <span>7.000.000 VND</span></div>
+							</div>
+							<div class="left w50">
+								<div class="img">
+									<img src="/assets/upload/deal1.jpg" />
+								</div>
+							</div>
+							<div class="clearfix"></div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		
+		<div class="product-cat pb10 clearfix">
+			<div class="product-cat-left pb2">
+				<div class="product-left">
+					<div class="product bgfbf9f9">
+						<div class="cat">
+							<div class="blue">
+								<div class="title-cat left">
+									<img src="/assets/upload/icon_thoi_trang.png" />
+									<span>E-voucher</span>
+								</div>
+								<div class="arrow left"></div>
+							</div>
+						</div>
+						<div class="img">
+							<img src="/assets/upload/p11.jpg" />
+						</div>
+						<div class="position">Áp dụng tại Hà Nội</div>
+						<div class="title"><a href="">"Shop more & save more" Bộ sư tập Esssentials</a></div>
+						<div class="price">Giá chỉ từ: <span>7.000.000 VND</span></div>
+					</div>
+				</div>
+				<div class="product-right">
+					<div class="product pl2">
+						<div class="bgfbf9f9">
+							<div class="img">
+								<img src="/assets/upload/p7.jpg" />
+							</div>
+							<div class="position">Áp dụng tại Hà Nội</div>
+							<div class="title">Bộ sưu tập Lacoste</div>
+							<div class="price">Giá chỉ từ: <span>150.000 VND</span></div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="product-cat-right pb2">
+				<div class="product-top pb2">
+					<div class="product bgfbf9f9">
+						<div class="product-content">
+							<div class="title">"Shop more & save more" Bộ sư tập Esssentials</div>
+							<div class="position">Áp dụng tại Hà Nội</div>
+							<div class="price">Giá chỉ từ: <span>7.000.000 VND</span></div>
+						</div>
+					</div>
+					<div class="product bgfbf9f9">
+						<div class="product-content">
+							<div class="img">
+								<img src="/assets/upload/p5.jpg" />
+							</div>
+						</div>
+					</div>
+					<div class="product">
+						<div class="product-content pl2">
+							<div class="bgfbf9f9">
+								<div class="img">
+									<img src="/assets/upload/p6.jpg" />
+								</div>
+								<div class="title">Chúc mừng 8/3</div>
+								<div class="price">Giá chỉ từ: <span>1.250.000 VND</span></div>
+							</div>
+						</div>
+					</div>
+					<div class="clearfix"></div>
+				</div>
+				<div class="product-bottom">
+					<div class="product">
+						<div class="product-content">
+							<div class="bgfbf9f9">
+								<div class="img">
+									<img src="/assets/upload/p2.jpg" />
+								</div>
+								<div class="title">BST hot summer 2017</div>
+								<div class="price">Giá chỉ từ: <span>7.000.000 VND</span></div>
+							</div>
+						</div>
+					</div>
+					<div class="product">
+						<div class="product-content pl2">
+							<div class="bgfbf9f9">
+								<div class="img">
+									<img src="/assets/upload/p3.jpg" />
+								</div>
+								<div class="title">Sale up 50%</div>
+								<div class="price">Giá chỉ từ: <span>1.250.000 VND</span></div>
+							</div>
+						</div>
+					</div>
+					<div class="product">
+						<div class="product-content pl2">
+							<div class="bgfbf9f9">
+								<div class="img">
+									<img src="/assets/upload/p4.jpg" />
+								</div>
+								<div class="title">Western dresses</div>
+								<div class="price">Giá chỉ từ: <span>250.000 VND</span></div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="more_products">
+			<div class="img" style="background-image:url('/assets/images/more-product.jpg')"></div>
+			<div class="link">
+				<a href="#">Xem thêm sản phẩm</a>
+			</div>
+		</div>
+		
+		<div class="product-cat pb10 clearfix">
+			<div class="product-cat-left pb2">
+				<div class="product-left">
+					<div class="product bgfbf9f9">
+						<div class="cat">
+							<div class="yellow">
+								<div class="title-cat left">
+									<img src="/assets/upload/icon_thoi_trang.png" />
+									<span>E-voucher</span>
+								</div>
+								<div class="arrow left"></div>
+							</div>
+						</div>
+						<div class="img">
+							<img src="/assets/upload/p11.jpg" />
+						</div>
+						<div class="position">Áp dụng tại Hà Nội</div>
+						<div class="title"><a href="">"Shop more & save more" Bộ sư tập Esssentials</a></div>
+						<div class="price">Giá chỉ từ: <span>7.000.000 VND</span></div>
+					</div>
+				</div>
+				<div class="product-right">
+					<div class="product pl2">
+						<div class="bgfbf9f9">
+							<div class="img">
+								<img src="/assets/upload/p7.jpg" />
+							</div>
+							<div class="position">Áp dụng tại Hà Nội</div>
+							<div class="title">Bộ sưu tập Lacoste</div>
+							<div class="price">Giá chỉ từ: <span>150.000 VND</span></div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="product-cat-right pb2">
+				<div class="product-top pb2">
+					<div class="product bgfbf9f9">
+						<div class="product-content">
+							<div class="title">"Shop more & save more" Bộ sư tập Esssentials</div>
+							<div class="position">Áp dụng tại Hà Nội</div>
+							<div class="price">Giá chỉ từ: <span>7.000.000 VND</span></div>
+						</div>
+					</div>
+					<div class="product bgfbf9f9">
+						<div class="product-content">
+							<div class="img">
+								<img src="/assets/upload/p5.jpg" />
+							</div>
+						</div>
+					</div>
+					<div class="product">
+						<div class="product-content pl2">
+							<div class="bgfbf9f9">
+								<div class="img">
+									<img src="/assets/upload/p6.jpg" />
+								</div>
+								<div class="title">Chúc mừng 8/3</div>
+								<div class="price">Giá chỉ từ: <span>1.250.000 VND</span></div>
+							</div>
+						</div>
+					</div>
+					<div class="clearfix"></div>
+				</div>
+				<div class="product-bottom">
+					<div class="product">
+						<div class="product-content">
+							<div class="bgfbf9f9">
+								<div class="img">
+									<img src="/assets/upload/p2.jpg" />
+								</div>
+								<div class="title">BST hot summer 2017</div>
+								<div class="price">Giá chỉ từ: <span>7.000.000 VND</span></div>
+							</div>
+						</div>
+					</div>
+					<div class="product">
+						<div class="product-content pl2">
+							<div class="bgfbf9f9">
+								<div class="img">
+									<img src="/assets/upload/p3.jpg" />
+								</div>
+								<div class="title">Sale up 50%</div>
+								<div class="price">Giá chỉ từ: <span>1.250.000 VND</span></div>
+							</div>
+						</div>
+					</div>
+					<div class="product">
+						<div class="product-content pl2">
+							<div class="bgfbf9f9">
+								<div class="img">
+									<img src="/assets/upload/p4.jpg" />
+								</div>
+								<div class="title">Western dresses</div>
+								<div class="price">Giá chỉ từ: <span>250.000 VND</span></div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="more_products">
+			<div class="img" style="background-image:url('/assets/images/more-product.jpg')"></div>
+			<div class="link">
+				<a href="#">Xem thêm sản phẩm</a>
+			</div>
+		</div>
+		
+		<div class="product-cat pb10 clearfix">
+			<div class="product-cat-left pb2">
+				<div class="product-left">
+					<div class="product bgfbf9f9">
+						<div class="cat">
+							<div class="green">
+								<div class="title-cat left">
+									<img src="/assets/upload/icon_thoi_trang.png" />
+									<span>E-voucher</span>
+								</div>
+								<div class="arrow left"></div>
+							</div>
+						</div>
+						<div class="img">
+							<img src="/assets/upload/p11.jpg" />
+						</div>
+						<div class="position">Áp dụng tại Hà Nội</div>
+						<div class="title"><a href="">"Shop more & save more" Bộ sư tập Esssentials</a></div>
+						<div class="price">Giá chỉ từ: <span>7.000.000 VND</span></div>
+					</div>
+				</div>
+				<div class="product-right">
+					<div class="product pl2">
+						<div class="bgfbf9f9">
+							<div class="img">
+								<img src="/assets/upload/p7.jpg" />
+							</div>
+							<div class="position">Áp dụng tại Hà Nội</div>
+							<div class="title">Bộ sưu tập Lacoste</div>
+							<div class="price">Giá chỉ từ: <span>150.000 VND</span></div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="product-cat-right pb2">
+				<div class="product-top pb2">
+					<div class="product bgfbf9f9">
+						<div class="product-content">
+							<div class="title">"Shop more & save more" Bộ sư tập Esssentials</div>
+							<div class="position">Áp dụng tại Hà Nội</div>
+							<div class="price">Giá chỉ từ: <span>7.000.000 VND</span></div>
+						</div>
+					</div>
+					<div class="product bgfbf9f9">
+						<div class="product-content">
+							<div class="img">
+								<img src="/assets/upload/p5.jpg" />
+							</div>
+						</div>
+					</div>
+					<div class="product">
+						<div class="product-content pl2">
+							<div class="bgfbf9f9">
+								<div class="img">
+									<img src="/assets/upload/p6.jpg" />
+								</div>
+								<div class="title">Chúc mừng 8/3</div>
+								<div class="price">Giá chỉ từ: <span>1.250.000 VND</span></div>
+							</div>
+						</div>
+					</div>
+					<div class="clearfix"></div>
+				</div>
+				<div class="product-bottom">
+					<div class="product">
+						<div class="product-content">
+							<div class="bgfbf9f9">
+								<div class="img">
+									<img src="/assets/upload/p2.jpg" />
+								</div>
+								<div class="title">BST hot summer 2017</div>
+								<div class="price">Giá chỉ từ: <span>7.000.000 VND</span></div>
+							</div>
+						</div>
+					</div>
+					<div class="product">
+						<div class="product-content pl2">
+							<div class="bgfbf9f9">
+								<div class="img">
+									<img src="/assets/upload/p3.jpg" />
+								</div>
+								<div class="title">Sale up 50%</div>
+								<div class="price">Giá chỉ từ: <span>1.250.000 VND</span></div>
+							</div>
+						</div>
+					</div>
+					<div class="product">
+						<div class="product-content pl2">
+							<div class="bgfbf9f9">
+								<div class="img">
+									<img src="/assets/upload/p4.jpg" />
+								</div>
+								<div class="title">Western dresses</div>
+								<div class="price">Giá chỉ từ: <span>250.000 VND</span></div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="more_products">
+			<div class="img" style="background-image:url('/assets/images/more-product.jpg')"></div>
+			<div class="link">
+				<a href="#">Xem thêm sản phẩm</a>
+			</div>
+		</div>
+    </div>
+</section>
