add html for category,deal,food,login,register

--- a/public/templates/login/login.html
+++ b/public/templates/login/login.html
@@ -1,3 +1,22 @@
-<div>Login</div>
-<button ng-click="ctrl.show()">Click</button>
-<button ng-click="ctrl.fblogin()">Facebook login</button>
+<div class="login">
+	<div class="text-center">
+		<img src="/assets/images/logo.png" />
+	</div>
+	<div class="wrapper">
+		<div class="wrap-login">
+			<form class="from-register">
+				<label>E-mail</label>
+				<input type="text" />
+				<label>Mật khẩu</label>
+				<input type="password" />
+				<p class="text-right"><a href="">Quên mật khẩu?</a></p>
+				<button>ĐĂNG NHẬP</button>
+				<p class="login-more">Đăng nhập với  &nbsp &nbsp
+					<a href=""><img src="/assets/images/icon_login_facebook.png" /></a> &nbsp &nbsp
+					<a href=""><img src="/assets/images/icon_login_google.png" /></a> 
+					 &nbsp &nbsp / Hoặc với tài khoản Mobile Banking của bạn
+				</p>
+			</form>
+		</div>
+	</div>
+</div>
