--- a/public/templates/partials/header.html
+++ b/public/templates/partials/header.html
@@ -30,4 +30,26 @@
 			<div class="clearfix"></div>
 		</div>
 	</div>
+	<div class="cat-top clearfix">
+		<div class="left w20">
+			<div class="cat clearfix">
+				<div class="red">
+					<div class="title-cat">
+						<img src="/assets/images/icon_categories.png" />
+						<span>CATEGORIES</span>
+					</div>
+				</div>
+				<div class="clearfix"></div>
+			</div>
+		</div>
+		<div class="cat-more">
+			<a href="">Du lịch</a>
+			<a href="">Thời trang nữ</a>
+			<a href="">Ẩm thực</a>
+			<a href="">Đồ công nghệ</a>
+			<a href="">Làm đẹp</a>
+			<a href="">Làm đẹp</a>
+		</div>
+		<div class="clearfix"></div>
+	</div>
 </section>
